Adding Lightning Pages to the App

--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -1,7 +1,7 @@
 {
   "orgName": "Loan Management System", 
   "edition": "Developer",
-  "features": ["PersonAccounts"],
+  "features": ["PersonAccounts", "Chatter"],
   "settings": {
     "lightningExperienceSettings": {
       "enableS1DesktopEnabled": true
