--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -1,10 +1,13 @@
 {
   "orgName": "Loan Management System", 
   "edition": "Developer",
-  "features": ["PersonAccounts", "Chatter"],
+  "features": ["PersonAccounts"],
   "settings": {
     "lightningExperienceSettings": {
       "enableS1DesktopEnabled": true
+    },
+    "chatterSettings": {
+      "enableChatter": true
     }
   }
 }
