Adding Feed Tracking

--- a/.sfdx/sfdx-config.json
+++ b/.sfdx/sfdx-config.json
@@ -1,4 +1,4 @@
 {
-  "defaultdevhubusername": "DevHubUser",
+  "defaultdevhubusername": "PersonalOrg",
   "defaultusername": "JamesManagementSystem"
 }
